# runworthy

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adapters.md
evals/: README.md  anthropics_skills.eval.json  clean_agent_repo.eval.json  crewai_examples.eval.json  open_deep_research.eval.json  record.py
evals/fixtures/: clean_agent_repo.json
examples/: README.md  anthropics_skills.json  crewai_examples.json  open_deep_research.json
schemas/: agent_map.schema.json  finding.schema.json  operational_answer.schema.json  posture_item.schema.json  readiness_report.schema.json  scan_target.schema.json
src/runworthy/: __init__.py  __main__.py  afr.py  afr_catalog.py  classify.py  cli.py  engine.py  fingerprint.py  intake.py  models.py  net.py  normalize.py  overlay.py  redact.py  schema_export.py  tools.py
src/runworthy/adapters/: __init__.py  base.py  gitleaks_adapter.py  osv_adapter.py  skillspector_adapter.py
src/runworthy/interpret/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py
src/runworthy/model/: __init__.py  client.py
src/runworthy/render/: __init__.py  markdown.py
tests/: conftest.py  evalkit.py  test_adapter_robustness.py  test_afr_grade.py  test_classify.py  test_cli.py  test_dedup_integration.py  test_egress.py  test_evals.py  test_fingerprint.py  test_golden.py  test_interpret.py  test_model_client.py  test_model_transport.py  test_normalize.py  test_overlay.py  test_paths.py  test_redaction.py  test_render.py  test_report_golden.py  test_scan_integration.py  test_schema.py
tests/fixtures/crewai_app/: crew.py  requirements.txt
tests/fixtures/env_template_repo/: .env.example  agent.py  langgraph.json  requirements.txt
tests/fixtures/langgraph_app/: agent.py  requirements.txt
tests/fixtures/noagent_repo/: README.md
tests/fixtures/secret_repo/: config.py
tests/fixtures/skill_repo/: SKILL.md  mcp.json
tests/fixtures/vuln_dep_repo/: agent.py  requirements.txt
tests/golden/: langgraph_app.json  open_deep_research.report.md  vuln_dep_repo.json
